started work on sidebar

--- a/src/app/components/page.component/template.html
+++ b/src/app/components/page.component/template.html
@@ -1,8 +1,8 @@
-<ng-content select="one-navbar"></ng-content>
+<ng-content select="[navbar]"></ng-content>
 <div class="body">
     <one-windowsplit>
-        <one-window [size]="20">
-            <ng-content select="one-sidebar"></ng-content>
+        <one-window [size]="15">
+            <ng-content select="[sidebar]"></ng-content>
         </one-window>
         <one-window>
             <ng-content select="[body]"></ng-content>
