--- a/src/styles/bootstrap/forms.less
+++ b/src/styles/bootstrap/forms.less
@@ -122,7 +122,7 @@ output {
   background-color: @input-bg;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @input-border;
-  border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+  border-radius: @input-border-radius; // Note: This has no effect on <selecttemplate>s in some browsers, due to the limited stylability of <selecttemplate>s in CSS.
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
@@ -545,7 +545,7 @@ input[type="checkbox"] {
 // Horizontal forms
 //
 // Horizontal forms are built on grid classes and allow you to create forms with
-// labels on the left and inputs on the right.
+// labels On the left and inputs On the right.
 
 .form-horizontal {
 
