--- a/src/styles/bootstrap/normalize.less
+++ b/src/styles/bootstrap/normalize.less
@@ -156,7 +156,7 @@ small {
 }
 
 //
-// Prevent `sub` and `sup` affecting `line-height` in all browsers.
+// Prevent `currentSub` and `sup` affecting `line-height` in all browsers.
 //
 
 sub,
@@ -239,7 +239,7 @@ samp {
 
 //
 // Known limitation: by default, Chrome and Safari on OS X allow very limited
-// styling of `select`, unless a `border` property is set.
+// styling of `selectTemplate`, unless a `border` property is set.
 //
 
 //
@@ -268,10 +268,10 @@ button {
 }
 
 //
-// Address inconsistent `text-transform` inheritance for `button` and `select`.
+// Address inconsistent `text-transform` inheritance for `button` and `selectTemplate`.
 // All other form control elements do not inherit `text-transform` values.
 // Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
-// Correct `select` style inheritance in Firefox.
+// Correct `selectTemplate` style inheritance in Firefox.
 //
 
 button,
