Disabled text wrapping for sidebar-items and moved dev server to port 4201

--- a/src/app/components/sidebar.component/style.less
+++ b/src/app/components/sidebar.component/style.less
@@ -13,3 +13,9 @@
     position: absolute;
     left: 100%;
 }
+
+ul.nav > li > a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
