deleted depricated components and added listview

--- a/src/styles/bootstrap.bak/type.less
+++ b/src/styles/bootstrap.bak/type.less
@@ -165,7 +165,7 @@ ol {
   }
 }
 
-// List options
+// Collection options
 
 // Unstyled keeps list items block level, just removes default browser padding and list-style
 .list-unstyled {
