--- a/src/styles/bootstrap.bak/panels.less
+++ b/src/styles/bootstrap.bak/panels.less
@@ -54,7 +54,7 @@
 }
 
 
-// List groups in panels
+// Collection groups in panels
 //
 // By default, space out list group content from panel headings to account for
 // any kind of custom content between the two.
