--- a/src/styles/bootstrap.bak/variables.less
+++ b/src/styles/bootstrap.bak/variables.less
@@ -666,7 +666,7 @@
 @progress-bar-info-bg:        @brand-info;
 
 
-//== List group
+//== Collection group
 //
 //##
 
@@ -674,7 +674,7 @@
 @list-group-bg:                 #fff;
 //** `.list-group-item` border color
 @list-group-border:             #ddd;
-//** List group border radius
+//** Collection group border radius
 @list-group-border-radius:      @border-radius-base;
 
 //** Background color of single list items on hover
